[package]
name = "MrSablierStaking"
version = "0.1.0"
edition = "2021"
authors = ["adrena.corto@gmail.com"]
homepage = "https://github.com/AdrenaFoundation/MrSablierStaking"
repository = "https://github.com/AdrenaFoundation/MrSablierStaking"
license = "Apache-2.0"
keywords = ["sablier", "solana", "grpc", "rust", "adrena"]
publish = true

[[bin]]
path = "./src/client.rs"
name = "mrsablierstaking"


[dependencies]
anyhow = "1.0.62"
borsh = "1.5.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.86"
solana-sdk = "~2.0.10"
solana-transaction-status = "~2.0.10"
solana-client = "~2.0.10"
solana-account-decoder = "~2.0.10"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tonic = "0.12.3"
yellowstone-grpc-client = "2.0.0"
yellowstone-grpc-proto = { version = "2.0.0", default-features = true }
sha2 = "0.10.8"
num-traits = "0.2.19"
adrena-abi = { git = "https://github.com/AdrenaFoundation/adrena-abi.git", rev = "a0880677cedc1f1c3cd3988afbb1dd2afec49dbb" }
# anchor-client = { version = "0.29.0", features = ["async"] }
# Waiting for 0.31.0 release - includes a fix on the async - https://github.com/coral-xyz/anchor/pull/3057
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "fe4fcded34a68934a6017a85d43a307cdb86d803", features = [
    "async",
] }
tokio-postgres = "0.7.12"
postgres-openssl = "0.5.0"
openssl = "0.10.50"
spl-associated-token-account = { version = "5.0.1", features = [
    "no-entrypoint",
] }

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
