[package]
name = "MrSablierStaking"
version = "0.1.0"
edition = "2021"
authors = ["adrena.corto@gmail.com"]
homepage = "https://github.com/AdrenaFoundation/MrSablierStaking"
repository = "https://github.com/AdrenaFoundation/MrSablierStaking"
license = "Apache-2.0"
keywords = ["sablier", "solana", "grpc", "rust", "adrena"]
publish = true

[[bin]]
path = "./src/client.rs"
name = "mrsablierstaking"


[dependencies]
adrena-abi = { git = "https://github.com/AdrenaFoundation/adrena-abi.git", rev = "5adb012b2f22d086c70d8fa97f08b68db75c49ed" } # cannot use latest as there is an issue updating crate with TLS
# anchor-client = { version = "0.29.0", features = ["async"] }
# Waiting for 0.31.0 release - includes a fix on the async - https://github.com/coral-xyz/anchor/pull/3057
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464", features = [
    "async",
] }
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
log = "0.4.17"
openssl = "0.10.50"
postgres-openssl = "0.5.0"
serde_json = "1.0.86"
solana-client = "=2.1.7"
solana-sdk = "=2.1.7"
spl-associated-token-account = { version = "=6.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.12"
tonic = "0.12.3"
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = { version = "5.0.0", default-features = true }
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
